--- a/WebApp/dockerFile
+++ b/WebApp/dockerFile
@@ -3,5 +3,6 @@ WORKDIR /web_app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 5002
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"]
+EXPOSE 5001
+# CMD ["python", "-m", "flask", "run", , "--host=0.0.0.0"]
+CMD [ "python", "app.py"]
