--- a/WebApp/dockerFile
+++ b/WebApp/dockerFile
@@ -3,6 +3,6 @@ WORKDIR /web_app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 5001
-# CMD ["python", "-m", "flask", "run", , "--host=0.0.0.0"]
+EXPOSE 5050
+# CMD ["python", "-m", "flask", "run"]
 CMD [ "python", "app.py"]
