--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,9 +4,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "test_CI"]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , "test_CI"]
 
 permissions:
   contents: read
