--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -5,20 +5,11 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
 
 jobs:
   build-and-deploy:
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,15 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
         pip install --user pipenv
         pipenv install
 
-    - name: Test with pytest
+    - name: Deployment
       run: |
-        pipenv run python -m pytest
-
-    # Deploy commands
-    - name: Deploy
-      run: |
-        # 
