--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,10 @@ python-dotenv = "1.0.0"
 flask = "*"
 datetime = "*"
 pymongo = "*"
-pytest = "*"
 
 [dev-packages]
 pytest = "*"
+mongomock = "*"
 
 [requires]
 python_version = "3"
