--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,9 +30,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --user pipenv
-        pipenv install
+        pip install pipenv
+        pipenv install --dev
 
     - name: Test with pytest
       run: |
-        pipenv run python -m pytest
+        pipenv run pytest
