--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      MONGO_DBNAME: test_db
     strategy:
       fail-fast: false
       matrix:
